// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

option go_package = "github.com/openbao/openbao/vault";

import "helper/forwarding/types.proto";

package vault;

message EchoRequest {
	string message = 1;
	// ClusterAddr is used to send up a standby node's address to the active
	// node upon heartbeat
	string cluster_addr = 2;
	// ClusterAddrs is used to send up a list of cluster addresses to a dr
	// primary from a dr secondary
	repeated string cluster_addrs = 3;
    
	uint64 raft_applied_index = 4;
	string raft_node_id = 5;
	NodeInformation node_info = 6;
	uint64 raft_term = 7;
	string raft_desired_suffrage = 8;
	string raft_upgrade_version = 9;
	string sdk_version = 11;

    // OpenBao values

    // checkpoint is the HA backend's last seen storage checkpoint on this
    // standby node. This allows the active server to gauge how far behind
    // a given client is.
    string checkpoint = 400;
}

message EchoReply {
	string message = 1;
	repeated string cluster_addrs = 2;
	uint32 replication_state = 3;
	uint64 raft_applied_index = 4;
	string raft_node_id = 5;
	NodeInformation node_info = 6;

    // OpenBao values

    // checkpoint is the HA backend's minimum required storage checkpoint on
    // as understood by the active node. This allows the standby node to
    // seal and unseal if it is out of date due to missing invalidations.
    string checkpoint = 400;
}

message NodeInformation {
	string cluster_addr = 1;
	string api_addr = 2;
	string mode = 3;
	string node_id = 4;
	uint32 replication_state = 5;
	string hostname = 6;

    // OpenBao values

    // uuid is the client-assigned identifier of this host, dynamically
    // assigned on client creation. Past clients should timeout on the
    // server after a number of missed heartbeats.
    string uuid = 400;
}

message ClientKey {
    string type = 1;
    bytes x = 2;
    bytes y = 3;
    bytes d = 4;
}

service RequestForwarding {
	rpc ForwardRequest(forwarding.Request) returns (forwarding.Response) {}
	rpc Echo(EchoRequest) returns (EchoReply) {}
}
